--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alankar &amp; Nancy</title>
+    <title>Farah &amp; Dias</title>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
@@ -83,8 +83,8 @@
             <div class="box">
                 <div class="title1 title1_2">Save the Date!</div>
                 <!-- <div class="title1"><span>18 <b>02</b></span></div> -->
-                <div class="title1"><span>18  -  02</span></div>
-                <div class="title0">2017</div>
+                <div class="title1"><span>29  -  02</span></div>
+                <div class="title0">2020</div>
             </div>
             <a href="#married" class="intro_down"><span><i class="fa fa-angle-down"></i></span></a>
         </div>
@@ -105,9 +105,9 @@
 
             <div class="married_txt" data-bottom="opacity:0" data-center="opacity:1">
                 <h2>You're Invited</h2>
-                On the 18th of Feb, 2017<br>
-                <b> Alankar Gupta &amp; Nancy Yadav</b><br>
-                are getting married in Agra, UP.<br>
+                On the 29th of Feb, 2020<br>
+                <b> Farah Nadya &amp; Dias Nurazna Pramukusuma</b><br>
+                are getting married in Sasono Mulyo, Depok<br>
                 <a href="#rsvp" class="btn go">RSVP NOW</a>
 
                 <div class="married_coundown"></div>
@@ -133,13 +133,13 @@
                 <div class="title1">Anand Bhavan</div>
                 <div class="title2">Banquet Hall</div>
                 <div class="title3"><a class="maplink" href="https://goo.gl/maps/aShLGX7YFkS2" target="_blank">
-                    Mall Road, <br/> Opposite Post Office, <br/>Sadar Bazar, <br/>
-                    Rakabganj, Agra<br/><i class="flaticon-map35"></i></a></div>
+                    Jalan Jatimulya, <br/> No 30, <br/>Cilodong,  <br/>
+                    Depok, Jawa Barat<br/><i class="flaticon-map35"></i></a></div>
 
                 <div class="pattern2"></div>
                 <div class="title1">7 o'clock</div>
                 <div class="title5">IN THE EVENING</div>
-                <div class="title4">Feb Eighteen<br>Two Thousand and Seventeen</div>
+                <div class="title4">Feb Twenty Nineth<br>Twenty Twenty</div>
                 <div class="pattern3"></div>
                 <div id="gmap_canvas"></div>
             </div>
