--- a/index.html
+++ b/index.html
@@ -130,14 +130,14 @@
 
                 <!-- Texts -->
                 <div class="pattern1"></div>
-                <div class="title1">Anand Bhavan</div>
-                <div class="title2">Banquet Hall</div>
+                <div class="title1">Sasono Mulyo</div>
+                <div class="title2">Pendopo Ageng</div>
                 <div class="title3"><a class="maplink" href="https://goo.gl/maps/aShLGX7YFkS2" target="_blank">
                     Jalan Jatimulya, <br/> No 30, <br/>Cilodong,  <br/>
                     Depok, Jawa Barat<br/><i class="flaticon-map35"></i></a></div>
 
                 <div class="pattern2"></div>
-                <div class="title1">7 o'clock</div>
+                <div class="title1">16 o'clock</div>
                 <div class="title5">IN THE EVENING</div>
                 <div class="title4">Feb Twenty Nineth<br>Twenty Twenty</div>
                 <div class="pattern3"></div>
