--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <h2>You're Invited</h2>
                 On the 29th of Feb, 2020<br>
                 <b> Farah Nadya &amp; Dias Nurazna Pramukusuma</b><br>
-                are getting married in Sasono Mulyo, Depok<br>
+                akan menikah di Sasono Mulyo, Depok<br>
                 <a href="#rsvp" class="btn go">RSVP NOW</a>
 
                 <div class="married_coundown"></div>
@@ -126,20 +126,20 @@
             <div class="photocamera"><span class="flaticon-slr2"></span></div>
 
             <div class="when_where_container opacity">
-                <h2>Where &amp; When</h2>
+                <h2>Dimana &amp; Kapan</h2>
 
                 <!-- Texts -->
                 <div class="pattern1"></div>
-                <div class="title1">Sasono Mulyo</div>
-                <div class="title2">Pendopo Ageng</div>
+                <div class="title1">Pendopo Ageng</div>
+                <div class="title2">Sasono Mulyo</div>
                 <div class="title3"><a class="maplink" href="https://goo.gl/maps/aShLGX7YFkS2" target="_blank">
                     Jalan Jatimulya, <br/> No 30, <br/>Cilodong,  <br/>
                     Depok, Jawa Barat<br/><i class="flaticon-map35"></i></a></div>
 
                 <div class="pattern2"></div>
-                <div class="title1">16 o'clock</div>
-                <div class="title5">IN THE EVENING</div>
-                <div class="title4">Feb Twenty Nineth<br>Twenty Twenty</div>
+                <div class="title1">pukul 15.00 - selesai </div>
+                <div class="title5">Sore Hari</div>
+                <div class="title4">Dua Puluh Sembilan Februari<br>Dua Ribu Dua Puluh</div>
                 <div class="pattern3"></div>
                 <div id="gmap_canvas"></div>
             </div>
@@ -148,7 +148,7 @@
     <!-- When & Where End -->
     <!-- Events -->
     <section class="our_story events" id="events">
-        <h2>Our Events</h2>
+        <h2>Cerita Kami</h2>
 
         <!-- Wrapper -->
         <div class="story_wrapper">
@@ -163,11 +163,10 @@
                     <div class="story_back"></div>
                     <div class="story_txt">
                         <div class="story_title">
-                            Mehandi
-                            <i>12.02.2017</i>
+                            Bertemu
+                            <i>21.06.2015</i>
                         </div>
-                        Mehandi is one of the sixteen adornments of the bride and her beauty is incomplete without it.
-                        According to popular belief, the darker the color of the Mehndi, the more her husband will love her.
+                        Kami bertemu di kampus Ganesha pada tahun 2015 dan dengan berbagai cerita hingga bertemu dalam satu pengajian
                     </div>
                 </div>
             </div>
@@ -181,7 +180,7 @@
                     <div class="story_back"></div>
                     <div class="story_txt">
                         <div class="story_title">
-                            Haldi
+                            Haloe
                             <i>15.02.2017</i>
                         </div>
                         The haldi paste is made from turmeric, rose water (or water), and sandalwood powder. The paste serves
@@ -303,7 +302,7 @@
 
     <!-- Gallery -->
     <section class="gallery" id="gallery">
-        <h2>Our Gallery</h2>
+        <h2>Galeri Kami</h2>
         <div class="gallery_wrapper">
         <div class="gallery_item">
                 <div class="gallery_txt">
@@ -360,9 +359,9 @@
                     <a href="#"><i class="fa fa-pinterest"></i></a>
                 </div>
 
-                <div class="title1">Alankar &amp; Nancy</div>
+                <div class="title1">Farah &amp; Dias</div>
                 <!-- Copyrights -->
-                <div class="copyrights"> © 2016 <a href="https://github.com/alankar0416">WebDesigner</a></div>
+                <div class="copyrights"> © 2016 <a href="https://github.com/diasnurazna">WebDesigner</a></div>
 
             </div>
         </div>
