--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
             </div>
 
             <div class="married_txt" data-bottom="opacity:0" data-center="opacity:1">
-                <h2>You're Invited</h2>
-                On the 29th of Feb, 2020<br>
+                <h2>Kamu Diundang</h2>
+                Pada 29 Februari 2020<br>
                 <b> Farah Nadya &amp; Dias Nurazna Pramukusuma</b><br>
                 akan menikah di Sasono Mulyo, Depok<br>
                 <a href="#rsvp" class="btn go">RSVP NOW</a>
