--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
     </section>
     <!-- Gallery End -->
     <!-- Footer -->
-    <section class="footer white_txt parallax" id="footer" data-image="img/footer3.png">
+    <section class="footer white_txt parallax" id="footer" data-image="img/footer_together.jpg">
         <div class="over"></div>
         <div class="container">
 
