--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
 
                 <div class="title1">Farah &amp; Dias</div>
                 <!-- Copyrights -->
-                <div class="copyrights"> © 2016 <a href="https://github.com/diasnurazna">WebDesigner</a></div>
+                <div class="copyrights"> © 2020 <a href="https://github.com/diasnurazna">Difaro Design</a></div>
 
             </div>
         </div>
