--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </section>
     <!-- Married End -->
     <!-- When & Where -->
-    <section class="when_where white_txt parallax" id="when_where" data-image="img/manpho.jpg"
+    <section class="when_where white_txt parallax" id="when_where" data-image="img/sasonomulyo.jpg"
              data-bottom-top="opacity:0;" data-bottom="opacity:1;">
         <div class="over"></div>
         <div class="container">
