--- a/index.html
+++ b/index.html
@@ -99,8 +99,7 @@
                  data-original-title="Dias Nurazna Pramukusuma">
                 <div class="im_arrows"></div>
             </div>
-            <div class="im2 parallax" data-bottom="right:20%" data-center="right:0" data-image="img/farah.jpg"
-                 data-original-title="Farah Nadya">
+            <div class="im2 parallax" data-bottom="right:20%" data-center="right:0" data-image="img/farah.jpg">
                 <div class="im_arrows"></div>
             </div>
 
