--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <div class="page">
 
     <!-- Intro -->
-    <section class="home_intro  parallax2" data-image="img/home.jpg">
+    <section class="home_intro  parallax2" data-image="img/home2.jpg">
 
         <div class="home_txt" data-0="opacity:1" data-top-bottom="opacity:0">
 
@@ -95,11 +95,11 @@
     <!-- Married -->
     <section class="married clearfix" id="married">
         <div class="container">
-            <div class="im1 parallax" data-bottom="left:30%" data-center="left:0" data-image="img/dias.jpg"
-                 data-original-title="Dias Nurazna Pramukusuma">
+            <div class="im1 parallax" data-bottom="left:30%" data-center="left:0" data-image="img/dias.jpg">
                 <div class="im_arrows"></div>
             </div>
-            <div class="im2 parallax" data-bottom="right:20%" data-center="right:0" data-image="img/farah.jpg">
+            <div class="im2 parallax" data-bottom="right:20%" data-center="right:0" data-image="img/farah.jpg"
+                 data-original-title="Farah Nadya">
                 <div class="im_arrows"></div>
             </div>
 
