--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <div class="page">
 
     <!-- Intro -->
-    <section class="home_intro  parallax2" data-image="img/home2.jpg">
+    <section class="home_intro  parallax2" data-image="img/home2.png">
 
         <div class="home_txt" data-0="opacity:1" data-top-bottom="opacity:0">
 
