--- a/index.html
+++ b/index.html
@@ -95,14 +95,13 @@
     <!-- Married -->
     <section class="married clearfix" id="married">
         <div class="container">
-            <div class="im1 parallax" data-bottom="left:30%" data-center="left:0" data-image="img/dias.jpg">
+            <div class="im1 parallax" data-bottom="left:30%" data-center="left:0" data-image="img/alankar2.jpg">
                 <div class="im_arrows"></div>
             </div>
-            <div class="im2 parallax" data-bottom="right:20%" data-center="right:0" data-image="img/farah.jpg"
-            data-original-title="Vidhya Shivalingam">
+            <div class="im2 parallax" data-bottom="right:20%" data-center="right:0" data-image="img/nancy6.jpg"
+                 data-original-title="Vidhya Shivalingam">
                 <div class="im_arrows"></div>
             </div>
-
             <div class="married_txt" data-bottom="opacity:0" data-center="opacity:1">
                 <h2>Kamu Diundang</h2>
                 Pada 29 Februari 2020<br>
@@ -132,7 +131,7 @@
                 <div class="pattern1"></div>
                 <div class="title1">Pendopo Ageng</div>
                 <div class="title2">Sasono Mulyo</div>
-                <div class="title3"><a class="maplink" href="https://goo.gl/maps/aShLGX7YFkS2" target="_blank">
+                <div class="title3"><a class="maplink" href="https://goo.gl/maps/7my6JBpZn1KkFFpWA" target="_blank">
                     Jalan Jatimulya, <br/> No 30, <br/>Cilodong,  <br/>
                     Depok, Jawa Barat<br/><i class="flaticon-map35"></i></a></div>
 
