--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
     <!-- Married -->
     <section class="married clearfix" id="married">
         <div class="container">
-            <div class="im1 parallax" data-bottom="left:30%" data-center="left:0" data-image="img/alankar2.jpg">
+            <div class="im1 parallax" data-bottom="left:30%" data-center="left:0" data-image="img/dias.jpg">
                 <div class="im_arrows"></div>
             </div>
-            <div class="im2 parallax" data-bottom="right:20%" data-center="right:0" data-image="img/nancy6.jpg"
+            <div class="im2 parallax" data-bottom="right:20%" data-center="right:0" data-image="img/farah.jpg"
                  data-original-title="Vidhya Shivalingam">
                 <div class="im_arrows"></div>
             </div>
