--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <div class="im1 parallax" data-bottom="left:30%" data-center="left:0" data-image="img/dias.jpg">
                 <div class="im_arrows"></div>
             </div>
-            <div class="im2 parallax" data-bottom="left:30%" data-center="right:0" data-image="img/farah.jpg">
+            <div class="im2 parallax" data-bottom="right:30%" data-center="right:0" data-image="img/farah.jpg">
                 <div class="im_arrows"></div>
             </div>
             <div class="married_txt" data-bottom="opacity:0" data-center="opacity:1">
