--- a/index.html
+++ b/index.html
@@ -162,9 +162,9 @@
                     <div class="story_txt">
                         <div class="story_title">
                             Bertemu
-                            <i>21.06.2015</i>
+                            <i>2015</i>
                         </div>
-                        Kami bertemu di kampus Ganesha pada tahun 2015 dan dengan berbagai cerita hingga bertemu dalam satu pengajian
+                        Kami  bertemu di Bandung tahun 2015. Dias saat itu telah memasuki masa mahasiswa tingkat akhir dan Farah masih mahasiswa baru. Alloh menqodar, kami berada di tempat pengajian yang sama di salah satu wilayah Dago, Bandung. Banyak cerita di dalamnya sampai kita bisa mengenal satu sama lain. 
                     </div>
                 </div>
             </div>
@@ -178,12 +178,10 @@
                     <div class="story_back"></div>
                     <div class="story_txt">
                         <div class="story_title">
-                            Haloe
-                            <i>15.02.2017</i>
+                            Bersahabat
+                            <i>2015-2016</i>
                         </div>
-                        The haldi paste is made from turmeric, rose water (or water), and sandalwood powder. The paste serves
-                        as a cleanser for the body and soul and signifies the bride's preparation and welcoming into adult
-                        married life. The haldi in some Indian communities also signifies protection.
+                       Waktu silih berganti, skripsi Dias semakin dekat dengan deadline dan juga Farah pun sudah mulai sibuk dengan Ujuan Akhir Semester. Hal yang menarik terjadi, Dias membimbing persiapan ujian Farah dan materinya sangat mirip dengan skripsi Dias. Hasilnya ujian Farah lancar dan skripsi Dias ikutan lancar
                     </div>
                 </div>
             </div>
@@ -196,10 +194,10 @@
                     <div class="story_back"></div>
                     <div class="story_txt">
                         <div class="story_title">
-                            Lagan
-                            <i>18.02.2017</i>
+                            Perkenalan Keluarga
+                            <i>2016</i>
                         </div>
-                        The relatives and associates of bride and groom gather, pandit will convery the traditional ceremony of 'lagan' wherein 'teeka' and 'aarti' is performed for the groom. It is then followed by photographs and videos taken by the photographers.
+                        Hari luar biasa Juli 2016 merupakan hari wisuda Dias untuk kelulusan sarjananya. Dias mengajak Farah untuk hadir dan berkenalan dengan keluarga besarnya. Suasana sangat cair dan bersahabat membuat hubungan kami menjadi lebih harmoni. 
                     </div>
                 </div>
             </div>
@@ -219,12 +217,10 @@
                     <div class="story_back"></div>
                     <div class="story_txt">
                         <div class="story_title">
-                            Reception
-                            <i>18.02.2017 7PM Onwards</i>
+                            Berpisah
+                            <i>2017-2019</i>
                         </div>
-                        This is virtually the first public appearance of the couple together, after
-                        wedding where they receive the blessing and gifts from the society and relatives. It is just an
-                        extension of the wedding day and is characterized by opulence and magnificence.
+                        Bukan berpisah karena masalah, tapi kami berpisah karena Dias sudah mulai bekerja di Jakarta sedangkan Farah masih kuliah di Bandung. Tapi Alloh selalu memberi jalan, tempat Dias bekerja sangat dekat dengan rumah Farah di Bogor. Jadi kami bisa bertemu di rumah ketika Farah libur semester. Tapi saat itu kami belum diqodar bisa menikah, mungkin supaya kami bisa menabung untuk persiapan semua
                     </div>
                 </div>
             </div>
@@ -238,12 +234,10 @@
                     <div class="story_back"></div>
                     <div class="story_txt">
                         <div class="story_title">
-                            Phere
-                            <i>19.02.2017 2 AM Onwards</i>
+                            Bertemu Kembali
+                            <i>2019-2020</i>
                         </div>
-                        The seven vows or pheras can be said to contain the crux of the practice of marriage. These seven
-                        vows are the seven promises which the bride and the groom make to each other for a happy and
-                        prosperous life. They are bound together by an unseen bond protected by these promising words.
+                        Farah melepas status mahasiswa tahun 2019 dan tak jauh dari itu Farah diterima bekerja di Jakarta. Dan entah apa yang rencana Alloh, kami berada di satu tempat pengajian lagi di Jakarta. Mungkin masa itu masa sangat bahagia bagi kami. Orang tua Farah haji, Farah wisuda, dan Dias melamarnya satu minggu setelah wisuda. Dan kami merencanakan pernihakan di awal tahun 2020. Mohon doanya ya 😊
                     </div>
                 </div>
             </div>
