--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                             Bertemu
                             <i>2015</i>
                         </div>
-                        Kami  bertemu di Bandung tahun 2015. Dias saat itu telah memasuki masa mahasiswa tingkat akhir dan Farah masih mahasiswa baru. Alloh menqodar, kami berada di tempat pengajian yang sama di salah satu wilayah Dago, Bandung. Banyak cerita di dalamnya sampai kita bisa mengenal satu sama lain. 
+                        Kami  bertemu di Bandung tahun 2015. Dias saat itu telah memasuki masa mahasiswa tingkat akhir dan Farah masih mahasiswa baru. Alloh menqodar, kami berada di tempat kajian yang sama di salah satu wilayah Dago, Bandung. Banyak cerita di dalamnya sampai kita bisa mengenal satu sama lain. 
                     </div>
                 </div>
             </div>
@@ -220,7 +220,7 @@
                             Berpisah
                             <i>2017-2019</i>
                         </div>
-                        Bukan berpisah karena masalah, tapi kami berpisah karena Dias sudah mulai bekerja di Jakarta sedangkan Farah masih kuliah di Bandung. Tapi Alloh selalu memberi jalan, tempat Dias bekerja sangat dekat dengan rumah Farah di Bogor. Jadi kami bisa bertemu di rumah ketika Farah libur semester. Tapi saat itu kami belum diqodar bisa menikah, mungkin supaya kami bisa menabung untuk persiapan semua
+                        Bukan berpisah karena masalah, tapi kami berpisah karena Dias sudah mulai bekerja di Jakarta sedangkan Farah masih kuliah di Bandung. Tapi Alloh selalu memberi jalan, tempat Dias bekerja sangat dekat dengan rumah Farah. Alhamdulillah diberi kesempatan untuk silaturahim dengan keluarga Farah. Dan saat itu Dias berniat untuk melanjutkan ke pernikahan tapi belum diqodar oleh Alloh.
                     </div>
                 </div>
             </div>
@@ -235,12 +235,30 @@
                     <div class="story_txt">
                         <div class="story_title">
                             Bertemu Kembali
-                            <i>2019-2020</i>
+                            <i>2019</i>
                         </div>
-                        Farah melepas status mahasiswa tahun 2019 dan tak jauh dari itu Farah diterima bekerja di Jakarta. Dan entah apa yang rencana Alloh, kami berada di satu tempat pengajian lagi di Jakarta. Mungkin masa itu masa sangat bahagia bagi kami. Orang tua Farah haji, Farah wisuda, dan Dias melamarnya satu minggu setelah wisuda. Dan kami merencanakan pernihakan di awal tahun 2020. Mohon doanya ya 😊
+                        Farah melepas status mahasiswa tahun 2019 dan dilanjutkan Dias melamar secara resmi seminggu setelahnya. Tak jauh dari itu Farah diterima bekerja di Jakarta. Dan entah apa yang rencana Alloh, kami berada di satu tempat kajian lagi di Jakarta. Mungkin masa itu masa sangat bahagia bagi kami. Orang tua Farah haji, Farah wisuda, dan Dias melamarnya satu minggu setelah wisuda.
                     </div>
                 </div>
             </div>
+ 
+             <!-- Item -->
+            <div class="story_item">
+                <div class="story_img parallax" data-image="img/phere.jpg">
+                    <div class="story_img_plane"></div>
+                </div>
+                <div class="story_plane">
+                    <div class="story_back"></div>
+                    <div class="story_txt">
+                        <div class="story_title">
+                            Pernikahan
+                            <i>2020</i>
+                        </div>
+                        Alhamdulillah tahun 2020 InsyaAlloh kami melanjutkan ke jenjang pernikahan. Dan ternyata segala perjuangan kami diberikan waktu terbaik oleh Alloh. Cita-cita kita untuk menikah muda dna mandiri bisa terkabulkan.
+                    </div>
+                </div>
+            </div>
+            
         </div>
     </section>
     <!-- Events End -->
