--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
         <div class="menu_wrapper">
             <div class="sub_menu anim">
                 <ul>
-                    <li><a href="#married">Invitation</a></li>
-                    <li><a href="#when_where">When &amp; Where</a></li>
-                    <li><a href="#events">Our Events</a></li>
+                    <li><a href="#married">Undangan</a></li>
+                    <li><a href="#when_where">Kapan &amp; Dimana</a></li>
+                    <li><a href="#events">Cerita Kami</a></li>
                     <li><a href="#rsvp">RSVP</a></li>
-                    <li><a href="#gallery">Our Gallery</a></li>
+                    <li><a href="#gallery">Galeri Kami</a></li>
                 </ul>
             </div>
             <div class="sub_img anim"></div>
@@ -220,7 +220,7 @@
                             Berpisah
                             <i>2017-2019</i>
                         </div>
-                        Bukan berpisah karena masalah, tapi kami berpisah karena Dias sudah mulai bekerja di Jakarta sedangkan Farah masih kuliah di Bandung. Tapi Alloh selalu memberi jalan, tempat Dias bekerja sangat dekat dengan rumah Farah. Alhamdulillah diberi kesempatan untuk silaturahim dengan keluarga Farah. Dan saat itu Dias berniat untuk melanjutkan ke pernikahan tapi belum diqodar oleh Alloh.
+                        Bukan berpisah karena masalah, tapi kami berpisah karena Dias sudah mulai bekerja di Jakarta sedangkan Farah masih kuliah di Bandung. Tapi Alloh selalu memberi jalan, tempat Dias bekerja sangat dekat dengan rumah Farah. Alhamdulillah diberi kesempatan untuk silaturahim dengan keluarga Farah. 
                     </div>
                 </div>
             </div>
