--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
             <!-- Item -->
             <div class="story_item">
-                <div class="story_img parallax" data-image="img/mehandi.jpg">
+                <div class="story_img parallax" data-image="img/bertemu.jpg">
                     <div class="story_img_plane"></div>
                 </div>
 
@@ -171,7 +171,7 @@
 
 
             <div class="story_item">
-                <div class="story_img parallax" data-image="img/haldi.jpg">
+                <div class="story_img parallax" data-image="img/bersahabat.jpg">
                     <div class="story_img_plane"></div>
                 </div>
                 <div class="story_plane">
@@ -187,7 +187,7 @@
             </div>
 
             <div class="story_item">
-                <div class="story_img parallax" data-image="img/sangeet.jpg">
+                <div class="story_img parallax" data-image="img/keluarga.jpg">
                     <div class="story_img_plane"></div>
                 </div>
                 <div class="story_plane">
@@ -210,7 +210,7 @@
 
             <!-- Item -->
             <div class="story_item">
-                <div class="story_img parallax" data-image="img/reception.jpg">
+                <div class="story_img parallax" data-image="img/berpisah.jpg">
                     <div class="story_img_plane"></div>
                 </div>
                 <div class="story_plane">
@@ -227,7 +227,7 @@
 
             <!-- Item -->
             <div class="story_item">
-                <div class="story_img parallax" data-image="img/phere.jpg">
+                <div class="story_img parallax" data-image="img/bertemulagi.jpg">
                     <div class="story_img_plane"></div>
                 </div>
                 <div class="story_plane">
@@ -244,7 +244,7 @@
  
              <!-- Item -->
             <div class="story_item">
-                <div class="story_img parallax" data-image="img/phere.jpg">
+                <div class="story_img parallax" data-image="img/nikah.jpg">
                     <div class="story_img_plane"></div>
                 </div>
                 <div class="story_plane">
