--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     Depok, Jawa Barat<br/><i class="flaticon-map35"></i></a></div>
 
                 <div class="pattern2"></div>
-                <div class="title1">pukul 15.00 - selesai </div>
+                <div class="title1">pukul 16.00 - 21.00 </div>
                 <div class="title5">Sore Hari</div>
                 <div class="title4">Dua Puluh Sembilan Februari<br>Dua Ribu Dua Puluh</div>
                 <div class="pattern3"></div>
@@ -210,7 +210,7 @@
 
             <!-- Item -->
             <div class="story_item">
-                <div class="story_img parallax" data-image="img/berpisah.jpg">
+                <div class="story_img parallax" data-image="img/pisah.jpg">
                     <div class="story_img_plane"></div>
                 </div>
                 <div class="story_plane">
