--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
 
                         <!-- Form Additional text -->
                         <p>We’re excited to see you! Any questions, just email us at:
-                            <a href="mailto:alankarrocks@gmail.com">alankarrocks@gmail.com</a></p>
+                            <a href="mailto:nuraznadias@gmail.com">nuraznadias@gmail.com</a></p>
                     </div>
                 </div>
 
