--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <div class="page">
 
     <!-- Intro -->
-    <section class="home_intro  parallax2" data-image="img/home3.jpg">
+    <section class="home_intro  parallax2" data-image="img/home4.jpg">
 
         <div class="home_txt" data-0="opacity:1" data-top-bottom="opacity:0">
 
@@ -137,7 +137,7 @@
                 <div class="pattern2"></div>
                 <div class="title1">pukul 16.00 - 21.00 </div>
                 <div class="title5">Sore Hari</div>
-                <div class="title4">Dua Puluh Sembilan Februari<br>Dua Ribu Dua Puluh</div>
+                <div class="title4">ART PERFORMANCE<br>19.30</div>
                 <div class="pattern3"></div>
                 <div id="gmap_canvas"></div>
             </div>
