--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
                     Depok, Jawa Barat<br/><i class="flaticon-map35"></i></a></div>
 
                 <div class="pattern2"></div>
-                <div class="title1">pukul 16.00 - 21.00 </div>
+                <div class="title1">pukul 18.30 - 21.00 </div>
                 <div class="title5">Sore Hari</div>
-                <div class="title4">ART PERFORMANCE<br>19.30</div>
+                <div class="title4">ART PERFORMANCE<br>19.00</div>
                 <div class="pattern3"></div>
                 <div id="gmap_canvas"></div>
             </div>
@@ -237,7 +237,7 @@
                             Bertemu Kembali
                             <i>2019</i>
                         </div>
-                        Farah melepas status mahasiswa tahun 2019 dan dilanjutkan Dias melamar secara resmi seminggu setelahnya. Tak jauh dari itu Farah diterima bekerja di Jakarta. Dan entah apa yang rencana Alloh, kami berada di satu tempat kajian lagi di Jakarta. Mungkin masa itu masa sangat bahagia bagi kami. Orang tua Farah haji, Farah wisuda, dan Dias melamarnya satu minggu setelah wisuda.
+                        Farah melepas status mahasiswa tahun 2019 dan dilanjutkan Dias melamar secara resmi seminggu setelahnya. Tak jauh dari itu Farah diterima bekerja di Jakarta. Dan entah apa yang rencana Alloh, kami berada di satu tempat kajian lagi di Jakarta. Masa itu masa sangat bahagia bagi kami. Orang tua Farah haji, Farah wisuda, dan Dias melamarnya satu minggu setelah wisuda.
                     </div>
                 </div>
             </div>
