--- a/index.html
+++ b/index.html
@@ -316,38 +316,38 @@
         <div class="gallery_wrapper">
         <div class="gallery_item">
                 <div class="gallery_txt">
-                    <a href="img/date1.jpg" title="Engagement Photos"><b>Date</b>
+                    <a href="img/payung.jpg" title="Engagement Photos"><b>Love</b>
                     </a>
                 </div>
-                <img src="img/date1.jpg" alt="Gallery 1">
+                <img src="img/payung.jpg" alt="Gallery 1">
             </div>
             <div class="gallery_item">
                 <div class="gallery_txt">
-                    <a href="img/roka2.jpg" title="Engagement Photos"><b>Roka</b>
+                    <a href="img/bunga.jpg" title="Engagement Photos"><b>Love</b>
                     </a>
                 </div>
-                <img src="img/roka2.jpg" alt="Gallery 2">
+                <img src="img/bunga.jpg" alt="Gallery 2">
             </div>
             <!-- <div class="gallery_item">
                 <div class="gallery_txt">
-                    <a href="img/gallary2.jpg" title="Engagement Photos"><b>Engagement</b>
+                    <a href="img/gallary2.jpg" title="Engagement Photos"><b>Love</b>
                     </a>
                 </div>
                 <img src="img/ring.jpg" alt="Gallery 3">
             </div> -->
             <div class="gallery_item">
                 <div class="gallery_txt">
-                    <a href="img/ring2.jpg" title="Engagement Photos"><b>Engagement</b>
+                    <a href="img/bunga.jpg" title="Engagement Photos"><b>Love</b>
                     </a>
                 </div>
-                <img src="img/ring2.jpg" alt="Gallery 3">
+                <img src="img/bunga.jpg" alt="Gallery 3">
             </div>
             <div class="gallery_item">
                 <div class="gallery_txt">
-                    <a href="img/pre_wed.jpg" title="Engagement Photos"><b>Pre Wedding</b>
+                    <a href="img/cincin.jpg" title="Engagement Photos"><b>PLove</b>
                     </a>
                 </div>
-                <img src="img/pre_wed.jpg" alt="Gallery 4">
+                <img src="img/cincin.jpg" alt="Gallery 4">
             </div>
         </div>
     </section>
