--- a/index.html
+++ b/index.html
@@ -337,10 +337,10 @@
             </div> -->
             <div class="gallery_item">
                 <div class="gallery_txt">
-                    <a href="img/bunga.jpg" title="Engagement Photos"><b>Love</b>
+                    <a href="img/payung2.jpg" title="Engagement Photos"><b>Love</b>
                     </a>
                 </div>
-                <img src="img/bunga.jpg" alt="Gallery 3">
+                <img src="img/payung2.jpg" alt="Gallery 3">
             </div>
             <div class="gallery_item">
                 <div class="gallery_txt">
