--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
             </div>
             <div class="gallery_item">
                 <div class="gallery_txt">
-                    <a href="img/cincin.jpg" title="Engagement Photos"><b>PLove</b>
+                    <a href="img/cincin.jpg" title="Engagement Photos"><b>Love</b>
                     </a>
                 </div>
                 <img src="img/cincin.jpg" alt="Gallery 4">
