--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 akan menikah di Sasono Mulyo, Depok<br>
                 <a href="#rsvp" class="btn go">RSVP NOW</a>
 
-                <div class="married_coundown"></div>
+               <!--  <div class="married_coundown"></div> -->
                 <div class="double_arrow"></div>
             </div>
         </div>
@@ -348,6 +348,13 @@
                     </a>
                 </div>
                 <img src="img/cincin.jpg" alt="Gallery 4">
+            </div>
+              <div class="gallery_item">
+                <div class="gallery_txt">
+                    <a href="img/cincin2.jpg" title="Engagement Photos"><b>Love</b>
+                    </a>
+                </div>
+                <img src="img/cincin2.jpg" alt="Gallery 4">
             </div>
         </div>
     </section>
