--- a/index.html
+++ b/index.html
@@ -314,19 +314,26 @@
     <section class="gallery" id="gallery">
         <h2>Galeri Kami</h2>
         <div class="gallery_wrapper">
-        <div class="gallery_item">
+            <div class="gallery_item">
+                <div class="gallery_txt">
+                    <a href="img/difaro.jpg" title="Engagement Photos"><b>Difaro</b>
+                    </a>
+                </div>
+                <img src="img/difaro.jpg" alt="Gallery 1">
+            </div>
+            <div class="gallery_item">
                 <div class="gallery_txt">
                     <a href="img/payung.jpg" title="Engagement Photos"><b>Love</b>
                     </a>
                 </div>
-                <img src="img/payung.jpg" alt="Gallery 1">
+                <img src="img/payung.jpg" alt="Gallery 2">
             </div>
             <div class="gallery_item">
                 <div class="gallery_txt">
                     <a href="img/bunga.jpg" title="Engagement Photos"><b>Love</b>
                     </a>
                 </div>
-                <img src="img/bunga.jpg" alt="Gallery 2">
+                <img src="img/bunga.jpg" alt="Gallery 3">
             </div>
             <!-- <div class="gallery_item">
                 <div class="gallery_txt">
@@ -340,21 +347,21 @@
                     <a href="img/payung2.jpg" title="Engagement Photos"><b>Love</b>
                     </a>
                 </div>
-                <img src="img/payung2.jpg" alt="Gallery 3">
+                <img src="img/payung2.jpg" alt="Gallery 4">
             </div>
             <div class="gallery_item">
                 <div class="gallery_txt">
                     <a href="img/cincin.jpg" title="Engagement Photos"><b>Love</b>
                     </a>
                 </div>
-                <img src="img/cincin.jpg" alt="Gallery 4">
+                <img src="img/cincin.jpg" alt="Gallery 5">
             </div>
               <div class="gallery_item">
                 <div class="gallery_txt">
                     <a href="img/cincin2.jpg" title="Engagement Photos"><b>Love</b>
                     </a>
                 </div>
-                <img src="img/cincin2.jpg" alt="Gallery 4">
+                <img src="img/cincin2.jpg" alt="Gallery 6">
             </div>
         </div>
     </section>
