--- a/index.html
+++ b/index.html
@@ -351,6 +351,13 @@
             </div>
             <div class="gallery_item">
                 <div class="gallery_txt">
+                    <a href="img/caca.png" title="Engagement Photos"><b>Love</b>
+                    </a>
+                </div>
+                <img src="img/caca.png" alt="Gallery 5">
+            </div>            
+            <div class="gallery_item">
+                <div class="gallery_txt">
                     <a href="img/cincin.jpg" title="Engagement Photos"><b>Love</b>
                     </a>
                 </div>
