--- a/index.html
+++ b/index.html
@@ -351,10 +351,10 @@
             </div>
             <div class="gallery_item">
                 <div class="gallery_txt">
-                    <a href="img/caca.png" title="Engagement Photos"><b>Love</b>
+                    <a href="img/caca.jpg" title="Engagement Photos"><b>Love</b>
                     </a>
                 </div>
-                <img src="img/caca.png" alt="Gallery 5">
+                <img src="img/caca.jpg" alt="Gallery 5">
             </div>            
             <div class="gallery_item">
                 <div class="gallery_txt">
