--- a/index.html
+++ b/index.html
@@ -363,6 +363,28 @@
                 </div>
                 <img src="img/cincin2.jpg" alt="Gallery 6">
             </div>
+             <div class="gallery_item">
+                <div class="gallery_txt">
+                    <a href="img/lamaran1.jpg" title="Engagement Photos"><b>Love</b>
+                    </a>
+                </div>
+                <img src="img/lamaran1.jpg" alt="Gallery 7">
+            <div class="gallery_item">
+                <div class="gallery_txt">
+                    <a href="img/lamaran2.jpg" title="Engagement Photos"><b>Love</b>
+                    </a>
+                </div>
+                <img src="img/lamaran2.jpg" alt="Gallery 8">
+            </div>
+            <div class="gallery_item">
+                <div class="gallery_txt">
+                    <a href="img/lamaran3.jpg" title="Engagement Photos"><b>Love</b>
+                    </a>
+                </div>
+                <img src="img/lamaran3.jpg" alt="Gallery 9">
+            </div>
+  
+            </div>
         </div>
     </section>
     <!-- Gallery End -->
