--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 Pada 29 Februari 2020<br>
                 <b> Farah Nadya &amp; Dias Nurazna Pramukusuma</b><br>
                 akan menikah di Sasono Mulyo, Depok<br>
-                <a href="#rsvp" class="btn go">RSVP NOW</a>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSf9iorSjA5lbt8KWKJrsv4oEHzg4iCbXW4lzk00j4pxsP6anw/viewform?usp=sf_link" class="btn go">RSVP NOW</a>
 
                <!--  <div class="married_coundown"></div> -->
                 <div class="double_arrow"></div>
@@ -264,7 +264,7 @@
     <!-- Events End -->
 
     <!-- RSVP -->
-    <section class="rsvp" id="rsvp">
+  <!--   <section class="rsvp" id="rsvp">
         <div class="container">
             <h2>Join Our Party</h2>
 
@@ -276,13 +276,13 @@
                     <div class="env_top"></div>
                 </div>
 
-                <div class="paper">
+                <div class="paper"> -->
 
                     <!-- End Date of Reservation -->
-                    <div class="paper_title">Please RSVP by Feb 15th</div>
+                 <!--   <div class="paper_title">Please RSVP by Feb 15th</div> -->
 
                     <!-- Form -->
-                    <div id="div_block_1">
+                  <!--  <div id="div_block_1">
                         <div class="txt_input">
                             <input type="text" class="form-control" id="name_block_1" placeholder="Your Name">
                         </div>
@@ -295,19 +295,19 @@
                         <div class="txt_input">
                             <input type="text" class="form-control" id="attending_block_1" placeholder="# Attending">
                         </div>
-                        <input name="" type="submit" value="Send" class="btn btn-lg submit_block_1">
+                        <input name="" type="submit" value="Send" class="btn btn-lg submit_block_1"> -->
 
 
                         <!-- Form Additional text -->
-                        <p>We’re excited to see you! Any questions, just email us at:
+                     <!--   <p>We’re excited to see you! Any questions, just email us at:
                             <a href="mailto:nuraznadias@gmail.com">nuraznadias@gmail.com</a></p>
                     </div>
                 </div>
 
             </div>
         </div>
-    </section>
-    <!-- RSVP End -->
+    </section> -->
+    <!-- RSVP End --> 
 
 
     <!-- Gallery -->
