--- a/index.html
+++ b/index.html
@@ -361,33 +361,61 @@
                 </div>
                 <img src="img/cincin.jpg" alt="Gallery 5">
             </div>
-              <div class="gallery_item">
+            <div class="gallery_item">
                 <div class="gallery_txt">
                     <a href="img/cincin2.jpg" title="Engagement Photos"><b>Love</b>
                     </a>
                 </div>
                 <img src="img/cincin2.jpg" alt="Gallery 6">
             </div>
+            <div class="gallery_item">
+                <div class="gallery_txt">
+                    <a href="img/lompat.jpg" title="Engagement Photos"><b>Love</b>
+                    </a>
+                </div>
+                <img src="img/lompat.jpg" alt="Gallery 7">
+            </div>
+            <div class="gallery_item">
+                <div class="gallery_txt">
+                    <a href="img/hadap.jpg" title="Engagement Photos"><b>Love</b>
+                    </a>
+                </div>
+                <img src="img/hadap.jpg" alt="Gallery 8">
+            </div>
+            <div class="gallery_item">
+                <div class="gallery_txt">
+                    <a href="img/depan2.jpg" title="Engagement Photos"><b>Love</b>
+                    </a>
+                </div>
+                <img src="img/depan2.jpg" alt="Gallery 9">
+            </div>
+            <div class="gallery_item">
+                <div class="gallery_txt">
+                    <a href="img/bunga2.jpg" title="Engagement Photos"><b>Love</b>
+                    </a>
+                </div>
+                <img src="img/bunga2.jpg" alt="Gallery 10">
+            </div>
              <div class="gallery_item">
                 <div class="gallery_txt">
                     <a href="img/lamaran1.jpg" title="Engagement Photos"><b>Love</b>
                     </a>
                 </div>
-                <img src="img/lamaran1.jpg" alt="Gallery 7">
+                <img src="img/lamaran1.jpg" alt="Gallery 11">
             </div>
               <div class="gallery_item">
                 <div class="gallery_txt">
                     <a href="img/lamaran2.jpg" title="Engagement Photos"><b>Love</b>
                     </a>
                 </div>
-                <img src="img/lamaran2.jpg" alt="Gallery 7">
+                <img src="img/lamaran2.jpg" alt="Gallery 12">
             </div>
              <div class="gallery_item">
                 <div class="gallery_txt">
                     <a href="img/lamaran3.jpg" title="Engagement Photos"><b>Love</b>
                     </a>
                 </div>
-                <img src="img/lamaran3.jpg" alt="Gallery 7">
+                <img src="img/lamaran3.jpg" alt="Gallery 13">
             </div>
         </div>
     </section>
